am facut modificari in index.html

--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <html>
     <head>
-    
+
     </head>
     <body>
         <h1>git</h1>
         <h2>Salut
-            sadsa
-            sad
-            dsad
-            asd
-            <samp>dsad
-                <samp>das
-                    dsa
-                    dsadasda
-                    sadasdasd
-                    saddasd
+            git
+            <table>
+                <table><h1>
+                    j
+                    kl
+                    <a href=""></a>
+                </h1></table>
+            </table>
                 </samp>
             </samp>
-        </h2>
     </body>
 </html>
+<em>
+    git
+    <datagrid></datagrid>
+</em>
